:cyclone: Wrapping divs in attempt to fix reset css

--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -1,15 +1,23 @@
+.hero {
+  display: flex;
+  align-items: center;
+}
 .content {
-  padding-top: var(--gap-double);
+  padding-right: var(--gap-double);
 }
 .rounded {
   border-radius: 50%;
-  width: 250px;
-  height: 250px;
+  width: 200px;
+  height: 200px;
 }
 
 @media (max-width: 960px) {
   .hero {
     flex-direction: column-reverse;
+  }
+  .content {
+    padding-top: var(--gap-double);
+    padding-right: 0;
   }
   .title {
     line-height: 1.5;
